# SupCom_tma4280

./: .gitignore  tempnotes.txt
exercises/1/code/: CMakeLists.txt  matmult.c
exercises/1/latex/: exercise1.tex
exercises/2/code/: CMakeLists.txt  matops.c
exercises/2/latex/: exercise2.tex
exercises/3/code/: CMakeLists.txt  matops_mpi.c  matrix.c  matrix.h
exercises/3/latex/: ex3.tex  matops_mpi.c
exercises/common/: preamble-custom-environments.tex  preamble.tex
notes/latex/: supcom.tex
notes/latex/code/ex1/: matmult.c
notes/latex/code/ex2/: matops.c
notes/latex/illustrations/architectures/: bus.tikz  crossbar.tikz  distributed.tikz  mesh.tikz  numa.tikz  shared.tikz
notes/latex/illustrations/cache/: 2-way.tikz  cache-line.tikz  direct.tikz  memory-address.tikz  n-way.tikz  set-associative.tikz
notes/latex/illustrations/comminucation/: mpi_bcast.tikz
notes/latex/illustrations/io/: nonseqio.tikz  parallel_file.tikz  parallel_file_graph.tikz  serial_file.tikz  serial_file_graph.ptex  (+3 more)
notes/latex/parts/: architectures.tex  banded_matrices.tex  blas.tex  cache.tex  equations.tex  exam_2006.tex  exam_2011.tex  exam_2012.tex  exam_2013.tex  exercise1.tex  exercise2.tex  exercise3.tex  matrix-matrix-multiplication.tex  matrix.py  matrix_vector_multiplication.tex  parallell_io.tex  parallellization_approaches.tex  poisson.tex  processor.tex  programming_models.tex  symbols.tex  the_conjugate_gradient_method.tex  timings.tex
notes/latex/preambles/: preamble-addon-envs.tex  preamble-addon-figures.tex  preamble-addon-listings.tex  preamble.tex
(+12 files in other folders)
